--- a/.gitignore
+++ b/.gitignore
@@ -43,14 +43,14 @@ data/conf/postfix/dnsbl_reply.map
 data/conf/rspamd/custom/*
 data/conf/rspamd/local.d/*
 data/conf/rspamd/override.d/*
-data/conf/sogo/custom-theme.js
-data/conf/sogo/plist_ldap
-data/conf/sogo/plist_ldap.sh
-data/conf/sogo/sieve.creds
-data/conf/sogo/cron.creds
-data/conf/sogo/custom-fulllogo.svg
-data/conf/sogo/custom-shortlogo.svg
-data/conf/sogo/custom-fulllogo.png
+# data/conf/sogo/custom-theme.js
+# data/conf/sogo/plist_ldap
+# data/conf/sogo/plist_ldap.sh
+# data/conf/sogo/sieve.creds
+# data/conf/sogo/cron.creds
+# data/conf/sogo/custom-fulllogo.svg
+# data/conf/sogo/custom-shortlogo.svg
+# data/conf/sogo/custom-fulllogo.png
 data/gitea/
 data/gogs/
 data/hooks/dovecot/*
